dark mode fix

--- a/docker/skins/Wiki7/resources/skins.wiki7.styles/components/Drawer.less
+++ b/docker/skins/Wiki7/resources/skins.wiki7.styles/components/Drawer.less
@@ -71,6 +71,12 @@
 }
 
 /* Override for theme switching when using skin classes instead of prefers-color-scheme */
+@media (prefers-color-scheme: dark) {
+	.wiki7-drawer__logo img.mw-logo-icon {
+		content: url("/assets/logo-white.svg");
+	}
+}
+
 .skin-wiki7-dark .wiki7-drawer__logo img.mw-logo-icon {
 	content: url("/assets/logo-white.svg");
 }
